# LLogger

./: .gitignore  CMakeLists.txt  LICENSE  LLogger.h  README.md
.devcontainer/: Dockerfile-ubuntu  devcontainer.json
Tests/: Colors.cpp  FunctionalityTest.cpp  Threads.cpp
Tests/Colors/: Colors.cpp
src/: llogger.cpp  llogger.h  llogger_definitions.h
test/: test.cpp
